--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^3.2.5",
     "react-magic-slider-dots": "^1.2.2",
+    "react-modal": "^3.16.1",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
