--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-head": "^3.4.2",
     "react-horizontal-scrolling-menu": "^3.2.5",
     "react-magic-slider-dots": "^1.2.2",
     "react-modal": "^3.16.1",
